# gfc

./: CMakeLists.txt  gfc.ui
src/: defines.h  gfc.cpp  gfc.h  gfc.ui  main.cpp
